--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <img src="./icon/avt.jpg" alt="">         
         </div>
         <div class="name">
-          <span>Trần Anh Tài</span>  
+          <span>Tài Mèo</span>  
         </div>
       </div>
       <div class="row">
